--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,11 @@
     "workbench.editor.enablePreview": false,
     "editor.rulers": [
         80
-    ]
+    ],
+    "[cpp]": {
+        "editor.quickSuggestions": false
+    },
+    "[c]": {
+        "editor.quickSuggestions": false
+    }
 }
