--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,13 @@
 {
+    "terminal.integrated.fontFamily": "Anonymice Powerline.ttf",
+    "terminal.integrated.setLocaleVariables": false,
     "workbench.editor.enablePreview": false,
-    "editor.rulers": [
-        80
-    ],
+    "editor.rulers": [80],
+    "window.zoomLevel": 1,
+    "typescript.check.tscVersion": false,
+    "python.linting.flake8Path": "/usr/local/bin/flake8",
+    "python.linting.flake8Enabled": true,
+    "python.linting.pylintArgs": ["--load-plugins", "flake8"],
     "[cpp]": {
         "editor.quickSuggestions": false
     },
