--- a/settings.json
+++ b/settings.json
@@ -13,5 +13,12 @@
     },
     "[c]": {
         "editor.quickSuggestions": false
-    }
+    },
+    "prettier.singleQuote": true,
+    "prettier.trailingComma": "all",
+    "prettier.tabWidth": 4,
+    "prettier.javascriptEnable": [],
+    "[typescript]": {
+        "editor.formatOnSave": true
+    }
 }
